--- a/estilo/style.css
+++ b/estilo/style.css
@@ -62,8 +62,8 @@ header > p{
     max-width: 500px;
     padding-right: 10px;
     padding-left: 10px;
-    margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
+    margin: auto;    
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.274);
 }
 
